--- a/content/BW_replot.ipynb
+++ b/content/BW_replot.ipynb
@@ -44,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install ipywidgets\n",
     "import numpy as np\n",
     "from numpy import array, linspace, exp, log\n",
     "import matplotlib.pyplot as plt\n",
